--- a/python/problem_017.ipynb
+++ b/python/problem_017.ipynb
@@ -5,7 +5,7 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 17\n",
+    "# Problem 17\n",
     "https://projecteuler.net/problem=17"
    ]
   },
@@ -14,9 +14,17 @@
    "execution_count": 1,
    "id": "e4d02396",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
    ]
   },
   {
@@ -200,12 +208,40 @@
     }
    ],
    "source": [
+    "# answer\n",
     "letter_counts(number_letter_counts(1000))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "4e6c5d0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.66 ms ± 66.9 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit letter_counts(number_letter_counts(1000))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7f3e01bd",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "109f4dd9",
    "metadata": {},
    "outputs": [
@@ -213,13 +249,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.85 ms ± 55.5 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "1.6 ms ± 23.1 μs per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o letter_counts(number_letter_counts(1000))\n",
-    "euler.save_benchmark(17, t)"
+    "bm = %timeit -o letter_counts(number_letter_counts(1000))\n",
+    "import euler\n",
+    "euler.save_benchmark(17, bm)"
    ]
   }
  ],
@@ -239,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
