--- a/python/problem_019.ipynb
+++ b/python/problem_019.ipynb
@@ -5,7 +5,7 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 19\n",
+    "# Problem 19\n",
     "https://projecteuler.net/problem=19"
    ]
   },
@@ -14,9 +14,17 @@
    "execution_count": 1,
    "id": "9e799b3e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
    ]
   },
   {
@@ -24,7 +32,7 @@
    "id": "90d1c4b1",
    "metadata": {},
    "source": [
-    "#### Solution 1 (custom function)"
+    "### Solution 1 (custom function)"
    ]
   },
   {
@@ -47,7 +55,7 @@
    "source": [
     "def counting_sundays(year_start, year_end):\n",
     "    \n",
-    "    day = 1 # 1 Jan 1900 is a monday; 6 days later is a Sunday (day 7). So day%7 == 0 is True for  all Sundays.\n",
+    "    day = 1 # 1 Jan 1900 is a monday; 6 days later is a Sunday (day 7). So day%7 == 0 is True for all Sundays.\n",
     "    sunday_count = 0\n",
     "\n",
     "    for year in range(1900, year_end + 1):\n",
@@ -81,26 +89,27 @@
     }
    ],
    "source": [
+    "# answer\n",
     "counting_sundays(1901, 2000)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2e84c396",
+   "id": "0985ef87",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "114 μs ± 1.53 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+      "100 μs ± 160 ns per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o counting_sundays(1901, 2000)\n",
-    "euler.save_benchmark(19, t)"
+    "# benchmark\n",
+    "%timeit counting_sundays(1901, 2000)"
    ]
   },
   {
@@ -108,7 +117,7 @@
    "id": "8212d8bd",
    "metadata": {},
    "source": [
-    "#### Solution 2 (pandas)"
+    "### Solution 2 (pandas)"
    ]
   },
   {
@@ -139,6 +148,7 @@
     }
    ],
    "source": [
+    "# answer\n",
     "dates = pd.date_range(start=\"1901-01-01\", end=\"2000-12-31\")\n",
     "sum([1 for (d, dn) in zip(dates.day.values, dates.day_name()) if d == 1 and dn == \"Sunday\"])"
    ]
@@ -146,20 +156,48 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "b4c0ca63",
+   "id": "2f811648",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.93 ms ± 326 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
+      "7.59 ms ± 64.5 μs per loop (mean ± std. dev. of 7 runs, 100 loops each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o sum([1 for (d, dn) in zip(pd.date_range(start=\"1901-01-01\", end=\"2000-12-31\").day.values, pd.date_range(start=\"1901-01-01\", end=\"2000-12-31\").day_name()) if d == 1 and dn == \"Sunday\"])\n",
-    "euler.save_benchmark(19, t)"
+    "# benchmark\n",
+    "%timeit sum([1 for (d, dn) in zip(pd.date_range(start=\"1901-01-01\", end=\"2000-12-31\").day.values, pd.date_range(start=\"1901-01-01\", end=\"2000-12-31\").day_name()) if d == 1 and dn == \"Sunday\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4ab78ce",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "e86968f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "104 μs ± 1.77 μs per loop (mean ± std. dev. of 7 runs, 10,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "bm = %timeit -o counting_sundays(1901, 2000)\n",
+    "import euler\n",
+    "euler.save_benchmark(19, bm)"
    ]
   }
  ],
@@ -179,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
